--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
         </ul>
 	</nav>
 	<aside class="aside">
+		<h2 class="prod-dest text-bold ">Destacados del mes</h2>
 		<div>
 			<div><img src="img/bot.jpg" alt="botellas cerveza"></div>
 			<div><img src="img/can.jpg" alt="canillas de cerveza tirada"></div>
 			<div><img src="img/varied.jpg" alt=""></div>
 		</div>
 	</aside>
+
 	<article class="main">
-		<img src="img/vasob.jpg" alt="vasos de cerveza">
+	<img src="img/vasob.jpg" alt="vasos de cerveza">
 	</article>
 	<footer class="footer">
 		<h3>Seguinos en nuestras redes</h3>
